--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jogo da Princesa Mágica</title>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+
     <style>
         body {
             margin: 0;
@@ -188,12 +190,6 @@
             padding: 24px;
             position: relative;
             animation: bookOpen 1.2s cubic-bezier(.7, 0, .3, 1);
-            font-family: 'Playfair Display', 'Great Vibes', serif;
-            font-size: 1.35em;
-            /* ajuste o tamanho aqui se quiser maior/menor */
-            line-height: 1.45;
-            color: #e91e63;
-            text-align: center;
         }
         
         @keyframes bookOpen {
